--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,13 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: "montserrant";
-	background-image: linear-gradient(125deg,#4f4f4f,#696969,#0048BA);
+	background-image: linear-gradient(125deg,#4f4f4f,#4d29ff,#696969,#0048BA);
 	background-size: 400%;
 	animation: bganimation 15s infinite;
 }
 .text{
 	color: white;
 	text-align: center;
-	margin: 400px 0;
 	font-size: 22px;
 }
 
