--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body{
 	font-size: 22px;
 }
 
-.loading{
+.loading {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -21,7 +21,18 @@ body{
 	display: flex;
 	align-items: center;
 }
-
+.loading.hidden {
+	animation: fadeOut 1s;
+	animation-fill-mode: forwards;
+}
+/*Loading Fade Away*/
+@keyframes fadeOut {
+	100% {
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+/*Loading Animation*/
 .obj{
 	width: 6px;
 	height: 40px;
@@ -51,6 +62,7 @@ body{
 .obj:nth-child(8){
 	animation-delay: 0.7s;
 }
+/*Makes the Lines Move from 0px to 40px and down*/
 @keyframes loading {
 	0%{
 		height: 0;
