--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ img.darrow {
 	text-align: center
 }
 
-.video-container {
+.video {
 	position: relative;
     padding-bottom: 56.25%;
     padding-top: 35px;
@@ -116,7 +116,7 @@ img.darrow {
     overflow: hidden;
 }
 
-.video-container iframe {
+.video iframe {
     position: absolute;
     top:0;
     left: 0;
