--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body{
 .text{
 	color: black;
 	text-align: center;
-	font-size: 22px;
+	font-size: 10vw;
 	padding: 60px;
 	font-size: 60px;
 	background-color: lightgray;
