--- a/css/styles.css
+++ b/css/styles.css
@@ -2,74 +2,9 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: "montserrant";
-	background-image: linear-gradient(125deg,#4f4f4f,#4d29ff,#696969,#0048BA);
+	background-image: linear-gradient(125deg,#4f4f4f,#72A0C1,#C9FFE5,#4d29ff,#696969,#FF7E00,#0048BA);
 	background-size: 400%;
 	animation: bganimation 15s infinite;
-}
-
-}
-
-.loading {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	height: 40px;
-	display: flex;
-	align-items: center;
-}
-.loading.hidden {
-	animation: fadeOut 1s;
-	animation-fill-mode: forwards;
-}
-/*Loading Fade Away*/
-@keyframes fadeOut {
-	100% {
-		opacity: 0;
-		visibility: hidden;
-	}
-}
-/*Loading Animation*/
-.obj{
-	width: 6px;
-	height: 40px;
-	background: red;
-	margin: 0 3px;
-	border-radius: 10px;
-	animation: loading 0.8s infinite;
-}
-.obj:nth-child(2){
-	animation-delay: 0.1s;
-}
-.obj:nth-child(3){
-	animation-delay: 0.2s;
-}
-.obj:nth-child(4){
-	animation-delay: 0.3s;
-}
-.obj:nth-child(5){
-	animation-delay: 0.4s;
-}
-.obj:nth-child(6){
-	animation-delay: 0.5s;
-}
-.obj:nth-child(7){
-	animation-delay: 0.6s;
-}
-.obj:nth-child(8){
-	animation-delay: 0.7s;
-}
-/*Makes the Lines Move from 0px to 40px and down*/
-@keyframes loading {
-	0%{
-		height: 0;
-	}
-	50%{
-		height: 40px;
-	}
-	100%{
-		height: 0;
-	}
 }
 
 @keyframes bganimation {
