--- a/pages/social/css/styles.css
+++ b/pages/social/css/styles.css
@@ -127,10 +127,8 @@ right: 0;
 }
 .discwid {
 position: relative;
-left: 0px;
-top: -10px;
-width: 100%;
-height:4vw;
+left: 15px;
+top: 15px;
 }
 .twit {
 position: relative;
@@ -153,7 +151,7 @@ font-size: 30px;
 }
 .footer {
 height: 40px;
-background-color: ;    /* Light blue */
+background-color: ;
 }
 .page {
 width: 1250px;
