--- a/pages/social/css/styles.css
+++ b/pages/social/css/styles.css
@@ -51,6 +51,7 @@ color: #fff;
 line-height: 100px;
 float: left;
 text-transform: uppercase;
+font-size: 5vh;
 }
 .menu{
 float: right;
@@ -114,7 +115,7 @@ transition: 0.7s;
 }
 .menu a{
 display: block;
-padding: 20px;
+padding: 5vh;
 }
 .hide-menu-btn{
 position: absolute;
@@ -124,11 +125,6 @@ right: 40px;
 #chk:checked ~ .menu{
 right: 0;
 }
-}
-.discwid {
-position: relative;
-left: 15px;
-top: 15px;
 }
 .twit {
 position: relative;
@@ -142,7 +138,7 @@ top: 5px;
 .sidebar {
 position: relative;
 top: 40px;
-left: -200px;
+left: 5vh;
 float: right;
 height: 300px;
 width: 500px;
@@ -154,8 +150,8 @@ height: 40px;
 background-color: ;
 }
 .page {
-width: 1250px;
-height: 600px;
+width: 100%;
+height: 100px;
 margin: 0 auto;
 overflow: hidden;
 }
