Fixed Social Background

--- a/pages/social/css/styles.css
+++ b/pages/social/css/styles.css
@@ -1,7 +1,16 @@
-body{
-background-image: url("https://media.discordapp.net/attachments/680689357661012019/756771789354303538/background.jpg?width=760&height=760");
-background-color: #cccccc;
-background-size: 110%;
+@media only screen and (max-width: 600px) {
+	body{
+		background-image: url("https://media.discordapp.net/attachments/680689357661012019/756771789354303538/background.jpg?width=760&height=760");
+		background-color: #cccccc;
+		object-fit: cover;
+	}
+}
+@media only screen and (min-width: 600px) {
+	body{
+		background-image: url("https://media.discordapp.net/attachments/680689357661012019/756771789354303538/background.jpg?width=760&height=760");
+		background-color: #cccccc;
+		background-size: 110%;
+	}
 }
 .footer {
 left: 0;
