--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,20 @@
+/*Changes Background for Devices under 600px (Mainly Mobile)*/
+@media only screen and (max-width: 600px) {
 body{
-	margin: 0;
-	padding: 0;
-	font-family: "montserrant";
-	background-image: linear-gradient(125deg,#4f4f4f,#72A0C1,#C9FFE5,#4d29ff,#696969,#FF7E00,#0048BA);
-	background-size: 200%;
-	animation: bganimation 15s infinite;
+background-image: url("https://cdn.discordapp.com/attachments/758498981717999636/758769771016618004/20200924_151726.jpg");
+background-color: #cccccc;
+object-fit: cover;
+background-repeat: no-repeat;
 }
-
-@keyframes bganimation {
-	0%{
-		background-position: 0% 50%;
-	}50%{
-		background-position: 100% 50%;
-	}100%{
-		background-position: 0% 50%;
-	}
-
+}
+/*Changed Background for Devices over 600px Tablets/Laptops/Computer Ect.*/
+@media only screen and (min-width: 600px) {
+body{
+background-image: url("https://cdn.discordapp.com/attachments/758498981717999636/758769771016618004/20200924_151726.jpg");
+background-color: #cccccc;
+background-size: 110%;
+background-repeat: no-repeat;
+}
 }
 
 .footer {
@@ -129,4 +128,8 @@ img.logo {
   top: 18px;
   left: 140px;
   width: 50px;
+}
+.welcome {
+  font-size: 30px;
+  color: #d4d4dc;
 }
